<resources>
    <string name="app_name">Garage App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_text">sdfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasfsfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasfsdfsdafasdfasdfasfdasdfasdfasdfsadfsadfasdfasdfsadfasdfsdfsdf</string>
    <string name="sorting">sorting</string>
    <string name="filter">filter</string>
    <string name="add_car">add car</string>
    <string name="name_of_car">Porsche</string>
    <string name="auto_image">auto image</string>
    <string name="model_of_car">911 Carrera</string>
    <string name="count_of_power">249</string>
    <string name="cylinder_volume_value">2</string>
    <string name="cylinder_volume">л&#160;/&#160;</string>
    <string name="power">&#160;л.с./&#160;</string>
    <string name="petrol">Petrol</string>
    <string name="drive_unit">4WD</string>
    <string name="color">Blue</string>
    <string name="dollar">&#160;$</string>
    <string name="price">50 000</string>

</resources>