<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_url"
                android:layout_width="130dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:contentDescription="@string/auto_image">

            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_of_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/name_of_car"
                    android:textSize="@dimen/medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/model_of_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:paddingBottom="5dp"
                    android:text="@string/model_of_car"
                    android:textSize="@dimen/medium"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cylinder_volume_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cylinder_volume_value"
                            android:textSize="@dimen/medium" />

                        <TextView
                            android:id="@+id/cylinder_volume"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cylinder_volume"
                            android:textSize="@dimen/medium" />

                        <TextView
                            android:id="@+id/power_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_of_power"
                            android:textSize="@dimen/medium" />

                        <TextView
                            android:id="@+id/power"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/power"
                            android:textSize="@dimen/medium" />

                        <TextView
                            android:id="@+id/fuel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/petrol"
                            android:textSize="@dimen/medium" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/drive_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drive_unit"
                        android:textSize="@dimen/medium" />

                    <TextView
                        android:id="@+id/color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textSize="@dimen/medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape"
                    android:elevation="2dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/dollar_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollar"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>